Fix minor findbugs issue.